# bot

./: .dockerignore  .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
bot_hive/: .dockerignore  CROSS_PLATFORM_BUILD.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.base  GPU_SETUP.md  Justfile  QUICKSTART.md  README.md  SESSION_FILE_GUIDE.md  SESSION_FILE_SETUP.md  docker-compose.yml  docker-entrypoint.sh
bot_hive/grammars/: response.gbnf
bot_hive/models/: README.md
bot_hive/src/: configuration.rs.template  connectors.rs  external_connections.rs  main.rs  services.rs
bot_hive/src/connectors/: llama_cpp_connector.rs  llama_cpp_connector.rs.bak  llm_connector.rs  message_connector.rs  ollama_connector.rs  tool_call_connector.rs  user_connector.rs
bot_hive/src/external_connections/: common.rs  discord.rs  llm.rs
bot_hive/src/life_cycles/: bot_life_cycle.rs  user_life_cycle.rs
bot_hive/src/models/: bot.rs  user.rs
bot_hive/src/services/: discord.rs  llama_cpp.rs  llama_cpp.rs.bak  llm.rs  ollama.rs  ollama.rs.bak
chatbot/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.worker  Justfile  README.md
chatbot/grammars/: execution_response.gbnf  primary_response.gbnf  response.gbnf  thinking_response.gbnf
chatbot/model_reference/: qwen.md
chatbot/models/: README.md
chatbot/models/qwen-qwen3-6-35b-a3b/: chat_template.jinja  manifest.toml
chatbot/models/qwen3-4b/: manifest.toml
chatbot/searxng/: Dockerfile  settings.yml
chatbot/skills/: document_conversion.md
chatbot/src/: agents.rs  base_prompt.rs  chat_format.rs  configuration.rs.template  connectors.rs  externals.rs  main.rs  model_pack.rs  models.rs  roles.rs  services.rs  state_machines.rs  tools.rs  types.rs
chatbot/src/agents/: executor_agent.rs  primary_agent.rs  test_agent.rs  thinking_agent.rs
chatbot/src/base_prompt/: thinking_base_prompt.rs
chatbot/src/connectors/: llama_cpp_connector.rs  message_connector.rs  tool_call_connector.rs
chatbot/src/life_cycles/: user_life_cycle.rs
chatbot/src/models/: bot.rs  user.rs
chatbot/src/roles/: engine.rs  local_model.rs  parse.rs  parsers.rs  primary_role.rs  qwen_parse.rs  render.rs  utility_role.rs
chatbot/src/roles/parsers/: qwen.rs
chatbot/src/services/: discord.rs  html_to_markdown.rs  lance_db.rs  llama_cpp.rs  markdown_service.rs
chatbot/src/state_machines/: bot_state_machine.rs  conversation_state_machine.rs  memory_manager_state_machine.rs  reminder_state_machine.rs  user_state_machine.rs
chatbot/src/types/: conversation.rs  media.rs  memory.rs  reminder.rs  user.rs
extracted/qwen-qwen3-6-35b-a3b-q8_0/: metadata.tsv
extractor/: Cargo.toml  README.md
extractor/src/: main.rs
framework/: Cargo.toml
framework/src/: bee_handle.rs  lib.rs  life_cycle_handle.rs  state_machine_handle.rs
kameo_playground/: Cargo.toml  README.md
kameo_playground/src/: counter.rs  lifecycle.rs  main.rs
kameo_playground/src/framework/: effects.rs  envelope.rs  mod.rs  runtime.rs  traits.rs
lancedb_playground/: Cargo.toml
lancedb_playground/src/: main.rs
lib_hive/: Cargo.toml
lib_hive/src/: bee_handle.rs  lib.rs  life_cycle_handle.rs
model_reference/: qwen.md
probe/: Cargo.toml  README.md
probe/src/: main.rs
re_framework/: Cargo.toml
re_framework/src/: effects.rs  handle.rs  lib.rs  machine.rs  persistence.rs  smoke.rs  store.rs  sweep.rs  turso_store.rs
sample_framework_project/: Cargo.toml  README.md
sample_framework_project/src/: conversation.rs  externals.rs  main.rs  stats.rs
sample_framework_project/tests/: framework_scenarios.rs
src/: lib_life_cycle.rs  life_cycles.rs  lifecycles.rs  main.rs
src/external_connections/: discord.rs
src/life_cycles/: bot_life_cycle.rs  user_life_cycle.rs
src/lifecycles/: bot_lifecycle.rs  user_lifecycle.rs
src/models/: bot.rs  user.rs
