[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
lib_hive = { path = "../lib_hive" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"
serde_json = "1.0"
serenity = { version = "0.12", default-features = false, features = [
    "cache",
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "utils",
    "cache",
] }
regex = "1.10"

