[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.48", features = ["full"] }
lib_hive = { path = "../lib_hive" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.21"
serde_json = "1.0"
serenity = { version = "0.12", default-features = false, features = [
    "cache",
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "utils",
    "cache",
] }
regex = "1.12"
chrono = { version = "0.4", features = ["serde"] }
llama-cpp-2 = "0.1"
num_cpus = "1.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"
rand = "0.9"
ollama-rs = { version = "0.3", default-features = false, features = ["rustls"] }
