[package]
name = "chatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama-cpp-2 = { version = "0.1.131", features = ["vulkan"] }
num_cpus = "1.17"
tokio = { version = "1.49", features = ["full"] }
framework = { path = "../framework" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.21"
serde_json = "1.0"
serenity = { version = "0.12", default-features = false, features = [
    "cache",
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "utils",
    "cache",
] }
regex = "1.12"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
urlencoding = "2.1"
scraper = "0.25"
readability = "0.3.0"
