[package]
name = "chatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama-cpp-2 = { version = "=0.1.146", features = ["vulkan", "mtmd"] } # stick to this version for now
num_cpus = "1.16"
tokio = { version = "1.48", features = ["full"] }
re_framework = { path = "../re_framework" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
once_cell = "1.21"
serde_json = "1.0"
encoding_rs = "0.8"
image = "0.25"
strum = { version = "0.28", features = ["derive"] }
serenity = { version = "0.12", default-features = false, features = [
    "cache",
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "utils",
    "cache",
] }
regex = "1.12"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
urlencoding = "2.1"
rs-trafilatura = { version="0.1", git = "https://github.com/Murrough-Foley/rs-trafilatura" }
scraper = "0.27"
readability = "0.3.0"
lancedb = { version = "=0.30", default-features = false }
lzma-sys = { version = "*", features = ["static"] } # static recommended by lance
arrow-array = "=58.3.0" # must match lancedb internal version, use `cargo tree | grep arrow` to see
fastembed = "5.8"

[lints]
workspace = true
