[package]
name = "chatbot"
version = "0.1.0"
edition = "2021"


[dependencies]
llama-cpp-2 = { version = "=0.1.146", features = ["vulkan", "mtmd"] }
num_cpus = "1.16"
tokio = { version = "1.48", features = ["full"] }
re_framework = { path = "../re_framework" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
minijinja = { version = "2.21", features = ["preserve_order"] }
minijinja-contrib = { version = "2.21", features = ["pycompat"] }
toml = "1"
encoding_rs = "0.8"
image = "0.25"
strum = { version = "0.28", features = ["derive"] }
serenity = { version = "0.12", default-features = false, features = [
    "cache",
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "utils",
    "cache",
] }
regex = "1.12"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
urlencoding = "2.1"
rs-trafilatura = { version="0.1", git = "https://github.com/Murrough-Foley/rs-trafilatura" }

[lints]
workspace = true
