[package]
name = "kameo_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
kameo = { version = "0.20", features = ["remote"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
