[package]
name = "lancedb_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
lancedb = { version = "=0.30", default-features = false }
lzma-sys = { version = "*", features = ["static"] } # static recommended by lance
arrow-array = "=58.3.0"
fastembed = "5.8"
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
